--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Bem vindo ao meu portfolio!
-description: #em constante construção#
+title: [Bem vindo ao meu portfolio!]
+description: [Em constante construção.]
