--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme
 
 title: [Bem vindo ao meu portfolio!]
-description: [Em constante construção.]
+description: [//em constante construção]
